--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -1,5 +1,7 @@
 # Question
+
 In a code snippet, demonstrate a `User` class with at least one:
+
 - class property
 - class method
 - instance property
@@ -7,5 +9,22 @@ In a code snippet, demonstrate a `User` class with at least one:
 
 # Answer
 
+```js
+class Car {
+  accidentHistory = [];
+  constructor(make, model, color) {
+    this.make = make;
+    this.model = model;
+    this.color = color;
+  }
+  static make = "honda";
+  findModel() {
+    console.log(this.model);
+  }
+  static changeColor(color) {
+    this.color = color;
+  }
+}
+```
 
 # Teacher Feedback
