--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -4,5 +4,6 @@ What is the difference between how instance methods/properties and class methods
 
 # Answer
 
+Class methods belong to the class themselves using the static keyword. Instance properties belong to the specific instance, don't need to use a static keyword. Static methods and properties have to be accessed using the original class name.
 
 # Teacher Feedback
