--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -3,6 +3,6 @@
 Provide an example a pair of classes that would create a "has-many / belongs-to" relationship.
 
 # Answer
-
+A to-do list `has-many` items.
 
 # Teacher Feedback
