--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -6,3 +6,5 @@ Provide an example a pair of classes that would create a "has-many / belongs-to"
 A to-do list `has-many` items.
 
 # Teacher Feedback
+1/3
+The question here is asking for a pair of classes, so 2 classes, that has a "has-many / belongs-to" relationship. Like a class that makes this one thing can have many of this other thing. 
